--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="./assets/img/me.png" alt="Thushar at Google, Hyderabad for Explore ML program and bootcamp" class="about__img">
+                    <img src="./assets/img/human.png" alt="Thushar M tech from IIT Kharagpur" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">
