--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@
                         </div>
     
                         <div class="home__img">
-                            <svg class="home__blob" ViewBox="0 0 250 187">
+                            <svg class="home__blob" ViewBox="0 0 200 187">
                                 <mask id="mask0" mask-type="alpha">
-                                    <path d="M70.1923 0C106.461 0 152.449 50.6948 158.541 95.5251C164.632 140.355 131.903 173.346 96.3705 186.582C60.8382 199.818 9.80364 188.397 1.0938 154.104C-7.61603 119.811 34.5763 81.9166 46.6333 41.3552C58.6904 0.793826 34.2143 0 70.1923 0Z" />
-
+                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"fill="black"/>
                                 </mask>
                                 <g mask="url(#mask0)">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346
-                                        165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                                        129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                                        -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"  />
+                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"fill="black"/>
 
-
-                                    <image class="home__blob-img" x="10" y="12" xlink:href="./assets/img/thushar.png"/>
+                                    <image class="home__blob-img" x="50" y="12" xlink:href="./assets/img/thushar.png"/>
 
                                 </g>
                             </svg>
