--- a/index.html
+++ b/index.html
@@ -110,14 +110,26 @@
                                      C 140 130, 60 130, 100 100 
                                      C 150 150, 50 150, 0 100 
                                      L 0 0 
-                                     Z" fill="white" />
+                                     Z" />
                                 </mask>
                                 <g mask="url(#mask0)">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"fill="black"/>
-
+                                    <path d="M100 0 
+                                     C 40 70, 160 70, 100 0 
+                                     C 140 70, 260 70, 200 0
+                                     C 150 50, 50 50, 0 0
+                                     L 0 100 
+                                     C 50 150, 150 150, 200 100 
+                                     C 140 130, 60 130, 100 100 
+                                     C 60 130, 140 130, 100 100
+                                     C 140 130, 60 130, 100 100 
+                                     C 140 170, 60 170, 100 100 
+                                     C 40 170, 160 170, 100 100 
+                                     C 160 170, 40 170, 100 100 
+                                     C 140 170, 60 170, 100 100 
+                                     C 140 130, 60 130, 100 100 
+                                     C 150 150, 50 150, 0 100 
+                                     L 0 0 
+                                     Z"  />
                                     <image class="home__blob-img" x="10" y="12" xlink:href="./assets/img/thushar.png"/>
 
                                 </g>
