--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                             <a href="https://github.com/Thushar-marvel" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>                            
                             </a>
+                            <a href="https://medium.com/@b.thusharmarvel97" target="_blank" class="home__social-icon">
+                                <i class="uil uil-medium-alt"></i>                            
+                            </a>
                           
                         </div>
     
@@ -113,7 +116,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'm Thushar</h1>
+                            <h1 class="home__title">Hi, I'm B Thushar</h1>
                             <h3 class="home__subtitle">Machine Learning Engineer</h3>
                             <p class="home__description">
                                 Machine learning | Data Science | Deep learning | Computer vision <br><br>
@@ -139,11 +142,11 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="./assets/img/human.png" alt="Thushar M tech from IIT Kharagpur" class="about__img">
+                    <img src="./assets/img/thushar.png" alt= "Thushar M tech from IIT Kharagpur" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">
-                            I'm a passionate and active learner with 2+ years of experience in Machine/Deep Learning.
+                            I'm a passionate and active learner with 2+ years of experience in Machine and Deep Learning.
                             Self-motivation, attention to detail, innovative problem solving, strong analytical skills,creativity 
                             are the things that drive me to achieve great results.
                         </p>
@@ -153,7 +156,6 @@
                                 Leave a message <i class="uil uil-comment-download button__icon"></i>
                             </a>
                         </div>
-
                     </div>
                 </div>
             </section>
