--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <a href="https://github.com/Thushar-marvel" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>                            
                             </a>
-                            <a href="https://medium.com/@b.thusharmarvel97" class="home__social-icon"><i class='bx bxl-medium' ></i></a>                   
+                            <a href="https://medium.com/@b.thusharmarvel97" class="home__social-icon"><i class='bx bxl-medium' ></i>               
                             </a>
                           
                         </div>
