--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <i class="uil uil-github-alt"></i>                            
                             </a>
                             <a href="https://medium.com/@b.thusharmarvel97" target="_blank" class="home__social-icon">
-                                <i class='uil uil-github-alt' ></i>               
+                               <i class='bx bxl-medium'></i>          
                             </a>
                           
                         </div>
