--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <style>
             body {
-                background-image: url("./assets/img/file.gif");
+                background-image: url("./assets/file.gif");
                 background-repeat: repeat;
                 background-size: cover;
                 background-position: center;
