--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                     <div class="about__data">
                         <p class="about__description">
-                            Passionate AI enthusiast and blogger in Data Science with 3+ years of experience in Machine and Deep Learning. 
+                            Passionate Machine learning engineer with 3+ years of experience in Machine and Deep Learning. 
                             Innovative problem solver with a strong analytical mindset. Committed to excellence and always eager to learn. 
                             Thrives in collaborative environments, leveraging AI to create a smarter future.
                         </p>
